Wed Mar 10 22:41:45 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication_Impl.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:

          Fix for a segmentation fault on some platforms.

Wed Mar 10 22:36:40 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/Components/Progressive_exec.h:
        * DAnCE/tests/CIAO/Components/Progressive_exec.cpp:

          Missing from my previous commit.

Wed Mar 10 20:34:07 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * tests/Minimum/Receiver/Receiver_exec.h:
        * tests/Minimum/Receiver/Receiver_exec.cpp:
        * tests/Minimum/Sender/Sender_exec.h:
        * tests/Minimum/Sender/Sender_exec.cpp:

          Minor code cleanup.

Wed Mar 10 14:33:00 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:
        * DAnCE/NodeApplication/NodeApplication_Impl.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
        * DAnCE/tests/CIAO/CommandlinePassage/Component.cdp:

          Adding logic allowing explicitly deployed components.  As a
          consequence, properties attached to components will no longer be
          passed into their associated component servers.  These
          properties must now be associated with a component server that
          is in a same process locality constraint the component.

Wed Mar 10 13:24:23 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/Components/Progressive.idl:
        * DAnCE/tests/CIAO/Components/Progressive.mpc:
        * DAnCE/tests/CIAO/Progressive_Deployments:
        * DAnCE/tests/CIAO/Progressive_Deployments/NodeManagerMap.dat:
        * DAnCE/tests/CIAO/Progressive_Deployments/Plan_A.cdp:
        * DAnCE/tests/CIAO/Progressive_Deployments/Plan_B.cdp:
        * DAnCE/tests/CIAO/Progressive_Deployments/Plan_C.cdp: