@@ -1,108 +1,0 @@
-// -*- C++ -*-
-// $Id$
-
-/**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.7.7
- * TAO and the TAO IDL Compiler have been developed by:
- *       Center for Distributed Object Computing
- *       Washington University
- *       St. Louis, MO
- *       USA
- *       http://www.cs.wustl.edu/~schmidt/doc-center.html
- * and
- *       Distributed Object Computing Laboratory
- *       University of California at Irvine
- *       Irvine, CA
- *       USA
- * and
- *       Institute for Software Integrated Systems
- *       Vanderbilt University
- *       Nashville, TN
- *       USA
- *       http://www.isis.vanderbilt.edu/
- *
- * Information about TAO is available at:
- *     http://www.cs.wustl.edu/~schmidt/TAO.html
- **/
-
-// TAO_IDL - Generated from
-// be/be_codegen.cpp:1216
-
-#ifndef CIAO_B_EXEC_HRY8PH_H_
-#define CIAO_B_EXEC_HRY8PH_H_
-
-#include /**/ "ace/pre.h"
-
-#include "BEC.h"
-
-#if !defined (ACE_LACKS_PRAGMA_ONCE)
-# pragma once
-#endif /* ACE_LACKS_PRAGMA_ONCE */
-
-#include /**/ "B_exec_export.h"
-#include "tao/LocalObject.h"
-
-namespace CIAO_B_Impl
-{
-  // TAO_IDL - Generated from
-  // be/be_visitor_component/facet_exh.cpp:53
-  
-  class B_EXEC_Export A_exec_i
-    : public virtual ::CCM_A,
-      public virtual ::CORBA::LocalObject
-  {
-  public:
-    A_exec_i (void);
-    virtual ~A_exec_i (void);
-    
-    // Operations and attributes from ::A
-  };
-  
-  class B_EXEC_Export B_exec_i
-    : public virtual B_Exec,
-      public virtual ::CORBA::LocalObject
-  {
-  public:
-    B_exec_i (void);
-    virtual ~B_exec_i (void);
-    
-    //@{
-    /** Supported operations and attributes. */
-    
-    //@}
-    
-    //@{
-    /** Component attributes and port operations. */
-    
-    
-    virtual ::CCM_A_ptr
-    get_a_port (void);
-    //@}
-    
-    //@{
-    /** Operations from Components::SessionComponent. */
-    
-    virtual void
-    set_session_context (
-      ::Components::SessionContext_ptr ctx);
-    
-    virtual void configuration_complete (void);
-    
-    virtual void ccm_activate (void);
-    virtual void ccm_passivate (void);
-    virtual void ccm_remove (void);
-    //@}
-    
-  
-  private:
-    ::CCM_B_Context_var context_;
-  };
-  
-  extern "C" B_EXEC_Export ::Components::EnterpriseComponent_ptr
-  create_B_Impl (void);
-}
-
-#include /**/ "ace/post.h"
-
-#endif /* ifndef */
-
